# marvin-benchmark

./: .gitignore  README.md  benchmark.html  generate_dataset.py  pyproject.toml  run_benchmark.py
data/: tasks.json
demo/: agent_diff.py  index.html  polarity_demo.html  polarity_engine.py  run_p1_demo.py
marvin_benchmark/: __init__.py  evaluator.py  runner.py  types.py  utils.py
marvin_benchmark/pillar1/: __init__.py  generator.py  scorer.py  simulator.py
marvin_benchmark/pillar2/: __init__.py  generator.py  simulator.py
marvin_benchmark/pillar3/: __init__.py  evaluator.py  generator.py
pipeline/: README.md  build_film.py  generate_video.py
results/: p1_demo_1774626539.json  p1_demo_1774626737.json
tests/: test_evaluator.py
